--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,12 @@
             <version>3.12.0</version>
             <type>jar</type>
         </dependency>
+		
+<dependency>
+            <groupId>zzorg.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
